# SoreviR-Solana-Q1-2023

Prerequisites/paulx_escrow_contract/: Cargo.toml  package-lock.json
Prerequisites/paulx_escrow_contract/src/: instruction.rs  lib.rs  processor.rs
Prerequisites/rust_crash_course/: Cargo.toml
Prerequisites/rust_crash_course/src/: arrays.rs  cli.rs  conditionals.rs  enums.rs  functions.rs  loops.rs  main.rs  pointer_ref.rs  print.rs  strings.rs  structs.rs  tuples.rs  types.rs  vars.rs  vectors.rs
