[package]
name = "bpf-program-template"
version = "0.1.0"
edition = "2021"
license = "WTFPL"
publish = false

[dependencies]
solana-program = "=1.14.4"
thiserror = "1.0.24"
spl-token = {version = "3.2.0", features = ["no-entrypoint"]}
arrayref = "0.3.6"

[features]
test-bpf = []
no-entrypoint = []

# [dev-dependencies]
# assert_matches = "1.4.0"
# solana-logger = "=1.14.4"
# solana-program-test = "=1.14.4"
# solana-sdk = "=1.14.4"
# solana-validator = "=1.14.4"

[lib]
crate-type = ["cdylib", "lib"]
